--- a/ex02.ipynb
+++ b/ex02.ipynb
@@ -176,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
         "id": "JoKINtSDTLvF"
       },
@@ -191,25 +191,32 @@
         "        list: 各データセットについて選択した2人の学生の成績の差の絶対値からなるリスト\n",
         "    '''\n",
         "    results = []\n",
-        "    with open(filename, 'r') as f:\n",
+        "\n",
+        "    with open(filename, 'r') as file:\n",
         "        while True:\n",
-        "            line = f.readline().strip()\n",
+        "            line = file.readline().strip()\n",
         "            if line == \"0 0 0\":\n",
         "                break\n",
+        "\n",
         "            N, M, P = map(int, line.split())\n",
+        "\n",
         "            votes = []\n",
-        "            for i in range(N):\n",
-        "                votes.append(int(f.readline().strip()))\n",
+        "            for _ in range(N):\n",
+        "                votes.append(int(file.readline().strip()))\n",
         "\n",
         "            total_votes = sum(votes)\n",
-        "            deduction = total_votes * P / 100\n",
-        "            net_pool = total_votes - deduction\n",
         "\n",
-        "            if votes[M - 1] == 0:\n",
+        "            winner_votes = votes[M - 1]\n",
+        "\n",
+        "            if winner_votes == 0:\n",
         "                results.append(0)\n",
-        "            else:\n",
-        "                payout_per_ticket = int(net_pool / votes[M - 1])\n",
-        "                results.append(payout_per_ticket)\n",
+        "                continue\n",
+        "\n",
+        "            pool_after_deduction = total_votes * 100 * (100 - P) // 100\n",
+        "\n",
+        "            payout_per_ticket = pool_after_deduction // winner_votes\n",
+        "\n",
+        "            results.append(payout_per_ticket)\n",
         "\n",
         "    return results"
       ]
@@ -336,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "MFrT7sOyTLvG"
       },
@@ -513,7 +520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Kozi73RPTLvL"
       },
